# pre-commit-example

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
